modified:   templates/main/view_domain.html 	modified:   views.py

--- a/dashboard/templates/main/view_domain.html
+++ b/dashboard/templates/main/view_domain.html
@@ -34,9 +34,8 @@
                                                         <div class="card flex-fill">
                                                                 <div class="card-header">
 
-                                                                        <h5 class="card-title mb-0">Database details</h5>
+                                                                        <h5 class="card-title mb-0">Domain Aliases</h5>
                                                                 </div>
-                                                                  <h2>Domain Aliases</h2>
                                                                   <a href="{% url 'alias_add' domain.pk %}" class="btn btn-sm btn-primary mb-2">Add Alias</a>
                                                                   
                                                                   {% if domain.aliases.exists %}
