--- a/dashboard/templates/main/mail_alias_form.html
+++ b/dashboard/templates/main/mail_alias_form.html
@@ -4,7 +4,7 @@
   <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">{% if alias %}Save{% else %}Create{% endif %}</button>
-    <a href="{% url 'alias_list' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'mail_alias_add' %}" class="btn btn-secondary">Cancel</a>
   </form>
 {% endblock %}
 
