--- a/dashboard/templates/main/blocked_objects.html
+++ b/dashboard/templates/main/blocked_objects.html
@@ -76,9 +76,15 @@
                   <a class="page-link" href="?page=1" tabindex="-1">&laquo; First</a>
                 </li>
                 <!-- Previous Page -->
-                <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
-                  <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">&lsaquo; Prev</a>
-                </li>
+                  {% if page_obj.has_previous %}
+                    <li class="page-item">
+                      <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">&lsaquo; Prev</a>
+                    </li>
+                  {% else %}
+                    <li class="page-item disabled">
+                      <span class="page-link">&lsaquo; Prev</span>
+                    </li>
+                  {% endif %}
 
                 <!-- Page numbers -->
                 {% for num in page_obj.paginator.page_range %}
